# Docker-DjangoBlog

./: .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
authors/: forms.py  models.py  urls.py  views.py
authors/migrations/: 0001_initial.py
blog/: mixins.py  settings.py  urls.py  views.py
blog/apps/authors/: admin.py  apps.py  forms.py  urls.py  views.py
blog/apps/authors/migrations/: 0001_initial.py
blog/apps/posts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
blog/apps/posts/migrations/: 0001_initial.py  0002_rename_latitute_view_latitude.py
blog/fixtures/: posts.json
blog/static/css/: styles.css
blog/templates/: base.html  index.html
blog/templates/authors/: confirm_delete.html  form.html  list.html  read.html
blog/templates/posts/: confirm_delete.html  form.html  list.html  read.html
posts/: admin.py  forms.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_rename_latitute_view_latitude.py
tests/: conftest.py
website/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
website/author/: form.py  models.py  urls.py  views.py
website/author/migrations/: 0001_initial.py
website/post/: form.py  models.py  urls.py  views.py
website/post/migrations/: 0001_initial.py  0002_post_photo_url.py  0003_auto_20200331_1041.py  0004_auto_20200331_1513.py
website/post/static/css/: styles.css
website/post/templates/: base.html
website/post/templates/author/: form.html  list.html
website/post/templates/post/: form.html  home.html  index.html  list.html  (+1 more)
website/website/: settings.py  urls.py
