[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["Lucas FRrança <lucasfrancaid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
psycopg2-binary = "^2.9.7"
django-bootstrap-form = "^3.4"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
